# learningworldsedu

./: .gitignore  CLAUDE.md  Dockerfile.fake-hub  Dockerfile.gameserver  README.md  android-fix-plan.md  build-gameserver.sh  dagger.json  docker-compose.local.yml  local-config.json  voxel_platform_spec.json
.claude/: settings.local.json
bundle/: config.json
bundle/shapes/: badge-dark.glb  badge.glb  blux.glb  jetpack.3zh  mantle.3zh  small-tree.glb  world_map_icon.3zh
ci/: Dockerfile  Dockerfile.dockerignore  Dockerfile_ci  Dockerfile_local  ci.sh  local-ci.sh  run.sh  test.lua
ci/C/: Makefile  main.cpp
ci/bundle/: config.json
ci/clang-format/: check.sh  format.sh
ci/storage/: .gitignore
clients/android/: .gitignore  build.gradle  gradle.properties  settings.gradle  voxowl_debug.jks
clients/android/app/src/main/cpp/: CMakeLists.txt  architectures.cmake  bgfx.cmake  vx-wrapper.cpp  xptools.cmake
clients/ios-macos/: .gitignore
clients/wasm/: .gitignore  README.txt  build_and_run.sh  run_server.sh
clients/wasm/Particubes/: CMakeLists.txt  bgfx.cmake  build.sh  lpng.cmake  shell_production.html  vx-wrapper-post-js.js  vx-wrapper.cpp  xptools.cmake
clients/windows/: HowToBuild.md  Main.cpp  generate_bundle.bat  helloworld.cpp
common/VXFramework/: GameCoordinator.cpp  GameCoordinator.hpp  HeadlessClient_ImGui.h  State.cpp  State.hpp  VXAccount.cpp  VXAccount.hpp  VXAlignment.hpp  VXApplication.cpp  VXApplication.hpp  VXButton.cpp  VXButton.hpp  VXCodeEditor.cpp  VXCodeEditor.hpp  VXColor.cpp  VXColor.hpp  VXConfig.cpp  VXConfig.hpp  VXEasing.cpp  VXEasing.hpp  VXFont.cpp  VXFont.hpp  VXGame.cpp  VXGame.hpp  VXGameRenderer.cpp  VXGameRenderer.hpp  VXHubClient.cpp  VXHubClient.hpp  VXHubRequestSender.cpp  VXHubRequestSender.hpp  VXImGui.cpp  VXImGui.hpp  VXImGuiTest.cpp  VXImGuiTest.hpp  VXInsets.hpp  VXJSON.cpp  VXJSON.hpp  VXKeyboard.hpp  VXLabel.cpp  VXLabel.hpp  (+72 more)
common/VXGameServer/: CMakeLists.txt  README.md  VXConnectionHandler.cpp  VXConnectionHandler.hpp  VXConnectionHandlerJoin.cpp  VXConnectionHandlerJoin.hpp  VXGameServer.cpp  VXGameServer.hpp  VXMessageQueues.cpp  VXMessageQueues.hpp  architectures.cmake  gameserver_config.h  main.cpp  xptools.cmake
common/VXLuaSandbox/: lua.hpp  lua_ai.cpp  lua_ai.hpp  lua_ambient.cpp  lua_ambient.hpp  lua_animation.cpp  lua_animation.hpp  lua_assetType.cpp  lua_assetType.hpp  lua_assets.cpp  lua_assets.hpp  lua_audioListener.cpp  lua_audioListener.hpp  lua_audioSource.cpp  lua_audioSource.hpp  lua_bin_serializer.cpp  lua_bin_serializer.hpp  lua_block.cpp  lua_block.hpp  lua_block_properties.cpp  lua_block_properties.hpp  lua_box.cpp  lua_box.hpp  lua_camera.cpp  lua_camera.hpp  lua_client.cpp  lua_client.hpp  lua_clouds.cpp  lua_clouds.hpp  lua_collision_groups.cpp  lua_collision_groups.hpp  lua_color.cpp  lua_color.hpp  lua_config.cpp  lua_config.hpp  lua_constants.h  lua_data.cpp  lua_data.hpp  lua_default_colors.cpp  lua_default_colors.hpp  (+122 more)
common/VXNetworking/: VXGameClient.cpp  VXGameClient.hpp  VXGameMessage.cpp  VXGameMessage.hpp  VXHub.cpp  VXHub.hpp  VXHubPrivateClient.cpp  VXHubPrivateClient.hpp  VXLatencyTester.cpp  VXLatencyTester.hpp  VXNetworkingUtils.cpp  VXNetworkingUtils.hpp
core/: camera.c  camera.h  colors.h  config.c  config.h  float3.c  inputs.h  light.c  light.h  matrix4x4.c  matrix4x4.h  mesh.c  quad.c  quad.h  quaternion.c  quaternion.h  rigidBody.c  rigidBody.h  scene.c  scene.h  serialization.c  serialization.h  serialization_gltf.c  serialization_v5.c  serialization_v6.c  serialization_vox.c  shape.c  shape.h  stream.c  stream.h  texture.c  texture.h  transform.c  transform.h  utils.c  utils.h  world_text.c  world_text.h
core/tests/: test_shape.h
dagger/: go.mod  main.go
distribution/: copyright.txt  description.txt  distribute.sh  keywords.txt  marketing-url.txt  promotional-text.txt  release_steam.sh
distribution/macOS/: README.md
distribution/steam/: README.md
dockerfiles/: android-build-env.Dockerfile  android-build-env_README.md  android-build-lws.Dockerfile  android-build-openssl.Dockerfile  dashboard.Dockerfile  discordbot.Dockerfile  fileserver.Dockerfile  gameserver.Dockerfile  hub-server.Dockerfile  hub-server.Dockerfile.dockerignore  link.Dockerfile  parent-dashboard.Dockerfile  parent-dashboard.Dockerfile.dockerignore  scheduler.Dockerfile  web.Dockerfile
fake-hub/: main.go
gameserver-build/: CMakeCache.txt
i18n/: es.json  fr.json  it.json  ja.json  pl.json  pt.json  ru.json  ua.json
i18n/generate/: main.go
lua/modules/: .luacheckrc  ambience.lua  api.lua  badge.lua  badge_modal.lua  camera.lua  coins.lua  config.lua  controls.lua  creations.lua  cubzh.lua  ease.lua  friends.lua  gallery.lua  history.lua  inputcodes.lua  item_details.lua  item_editor.lua  item_grid.lua  jumpfly.lua  kvs.lua  loading_modal.lua  localevent.lua  localize.lua  massloading.lua  menu.lua  modal.lua  notifications.lua  passkey.lua  profile.lua  report.lua  server_list.lua  settings.lua  sfx.lua  signup.lua  system_api.lua  transformgizmo.lua  ui_avatar.lua  ui_avatar_editor.lua  ui_loading_animation.lua  (+8 more)
misc/: list-file-extensions.sh
misc/avatar_animation/: README.md  anim_drink.json  anim_holdDrink.json  anim_idle.json  (+5 more)
plans/: 2026-02-14-repo-restructure.md
scripts/: build-ios.sh  build-macos.sh  convert_env_to_header.ps1  convert_env_to_header.sh  convert_env_to_xcconfig.sh  secure-modules.sh
servers/: docker-compose-prod-local.yml  docker-compose-prod.yml  export-gameserver-tar-gz.sh  hub.sh  push-public-deps.sh  schedulers.json
shaders/: fs_clear_tex_cutout.sc  fs_font_common.sh  fs_mesh_common.sh  fs_pack_depth_tex_cutout.sc  fs_quad_common.sh  fs_skybox_common.sh  fs_skybox_fallback.sc  fs_skybox_variant_clear.sc  fs_skybox_variant_clear_ldepth.sc  fs_skybox_variant_cube.sc  fs_skybox_variant_cube_clear.sc  fs_skybox_variant_cube_clear_ldepth.sc  fs_skybox_variant_cubelerp.sc  fs_skybox_variant_cubelerp_clear.sc  fs_skybox_variant_cubelerp_clear_ldepth.sc  fs_transparency_weight_common.sh  fs_voxels_common.sh  vs_quad_common.sh  vs_voxels_common.sh
(+866 files in other folders)
